@@ -1,3 +1,11 @@
+2007-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/png.c (png_flush_data): Don't invoke SyncBlob()
+	since it does far more than force data to the output file.
+	* coders/jpeg.c (TerminateDestination): Don't invoke SyncBlob()
+	since it does far more than force data to the output file.
+	* magick/blob.c (SyncBlob): Remove from public interface.
+
 2007-09-12  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/mat.c Allowed to read signed integer matrices.
